--- a/app/index.html
+++ b/app/index.html
@@ -1,6 +1,4 @@
 <!DOCTYPE html>
-
-
 <html>
 <head>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -8,7 +6,10 @@
   <title>Clear View Escapes</title>
   <meta name="keywords" content="Travel planning, travel bundles, travel escapes, affordable travel.">
   <meta name="description" content="Your clarity. One trip away. We create soul restoring journeys that inspire you to be you.">
-</head>
+
+  <link rel="stylesheet" href="temp/styles/styles.css">
+  
+  </head>
 <body>
   <header>
     <img src="assets/images/icons/clear-view-escapes.svg">
@@ -24,10 +25,12 @@
 
   <div class="large-hero">
     <img src="assets/images/hero--large.jpg">
-    <h1>Your clarity.</h1>
-    <h2>One trip away.</h2>
-    <p>We create soul restoring journeys that inspire you to be you.</p>
-    <p><a href="#">Get Started Today</a></p>
+    <div class="large-hero__text-content">
+		<h1>Your clarity.</h1>
+		<h2>One trip away.</h2>
+		<p>We create soul restoring journeys that inspire you to be you.</p>
+		<p><a href="#">Get Started Today</a></p>
+	</div>
   </div>
 
   <div id="our-beginning">
