--- a/app/index.html
+++ b/app/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link href='https://fonts.googleapis.com/css?family=Roboto:400,100,300,500,700' rel='stylesheet' type='text/css'>
   <title>Clear View Escapes</title>
@@ -13,7 +14,9 @@
 <body>
   <header>
     <img src="assets/images/icons/clear-view-escapes.svg">
-    <a class="btn" href="#">Get in Touch</a>
+    <div id="11" style="background:#98bf21;height:100px;width:100px;position:absolute;">
+		<a id="test" class="btn">Get in Touch</a>
+	</div>
     <nav>
       <ul>
         <li><a href="#our-beginning">Our Beginning</a></li>
@@ -114,4 +117,6 @@
     <p>Copyright &copy; 2016 Clear View Escapes. All rights reserved. <a class="btn btn--orange" href="#">Get in Touch</a></p>
   </footer>
 </body>
+
+<script src="assets/js/testai.js"></script>
 </html>
