styling header finished

--- a/app/index.html
+++ b/app/index.html
@@ -14,8 +14,12 @@
   <header class="site-header">
     <div class="wrapper">
 		<div class="site-header__logo">
-			<div class="icon icon--clear-view-escapes">Clear View Escapes</div>
+			<div class="site-header__logo__graphic icon icon--clear-view-escapes">Clear View Escapes</div>
 		</div>
+		
+		<div class="site-header__menu-icon"></div>
+		
+		<div class="site-header__menu-content">
 		<div class="site-header__button-container">
 			<a class="btn" href="#">Get in Touch</a>
 		</div>
@@ -26,6 +30,7 @@
         <li><a href="#testimonials">Testimonials</a></li>
       </ul>
     </nav>
+		</div>
 	</div>
   </header>
 
