finished js modal

--- a/app/index.html
+++ b/app/index.html
@@ -23,7 +23,7 @@
 		
 		<div class="site-header__menu-content">
 		<div class="site-header__button-container">
-			<a class="btn" href="#">Get in Touch</a>
+			<a class="btn open-modal" href="#">Get in Touch</a>
 		</div>
 		<nav class="primary-nav primary-nav__pull-right">
       <ul>
@@ -117,7 +117,7 @@
   <div id="testimonials" class="page-section page-section--no-b-paddding-until-large page-section--testimonials" data-matching-link="#testimonials-link">
    <div class="wrapper wrapper--no-padding-until-large">
     
-    <h2 class="section-title section-title--blue"><img class="section-title__icon" src="assets/images/icons/comment.svg">Real <strong>Testimonials</strong></h2>
+    <h2 class="section-title section-title--blue"><span class="icon icon--comment section-title__icon"></span>Real <strong>Testimonials</strong></h2>
 
     <div class="row row--equal-height-at-large row--gutters row--gutters-small generic-content-container row--t-padding">
 		<div class="row__large-4">
@@ -162,11 +162,28 @@
 	<p>
 	<span class="site-footer__text">Copyright &copy; 2017 MV media. All rights reserved. 
 	</span>
-	<a class="btn btn--orange" href="#">Get in Touch</a>
+	<a class="btn btn--orange open-modal" href="#">Get in Touch</a>
 	</p>
   
   </div>
   </footer>
+  
+  <div class="modal">
+	<div class="modal__inner">
+		<h2 class="section-title section-title--blue section-title--less-margin"><span class="icon icon--mail section-title__icon"></span>Get in <strong>Touch</strong></h2>
+		<div class="wrapper wrapper--narrow">
+			<p class="modal__description">We will have an online order system in place soon. Until then, connect with us on anny platforms below.</p>
+		</div>
+		<div class="social-icons">
+			<a href="#" class="social-icons__icon"><span class="icon icon--facebook"></span></a>
+			<a href="#" class="social-icons__icon"><span class="icon icon--twitter"></span></a>
+			<a href="#" class="social-icons__icon"><span class="icon icon--instagram"></span></a>
+			<a href="#" class="social-icons__icon"><span class="icon icon--youtube"></span></a>
+		</div>
+	</div>
+	<div class="modal__close">X</div>
+  </div>
+  
   <script src="temp/scripts/App.js"></script>
 </body>
 </html>
